[gd_scene load_steps=6 format=3 uid="uid://shbxcqmjf7f7"]

[ext_resource type="Script" path="res://internet_connection/scripts/internet_connection.gd" id="1_w4fpe"]
[ext_resource type="Texture2D" uid="uid://beng3465m1vqw" path="res://assets/ui/check_connection/bg.jpg" id="2_cffum"]

[sub_resource type="Animation" id="Animation_ioeqa"]
resource_name = "disolve"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../TransitionLayer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.156863, 0.156863, 0.156863, 0), Color(0.156863, 0.156863, 0.156863, 1)]
}

[sub_resource type="Animation" id="Animation_qhmf6"]
resource_name = "text_animation"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../CheckingConnection:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": ["Checking Internet Connection", "Checking Internet Connection.", "Checking Internet Connection..", "Checking Internet Connection...", "Checking Internet Connection....", "Checking Internet Connection.....", "Checking Internet Connection....", "Checking Internet Connection...", "Checking Internet Connection..", "Checking Internet Connection.", "Checking Internet Connection."]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rll6h"]
_data = {
"disolve": SubResource("Animation_ioeqa"),
"text_animation": SubResource("Animation_qhmf6")
}

[node name="InternetConnection" type="CanvasLayer"]
script = ExtResource("1_w4fpe")

[node name="BG" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cffum")

[node name="CheckingConnection" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 342.0
offset_top = 483.0
offset_right = 1602.0
offset_bottom = 596.0
size_flags_horizontal = 4
size_flags_vertical = 6
theme_override_font_sizes/font_size = 80
text = "Checking Internet Connection....."

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -944.5
offset_top = -120.0
offset_right = 944.5
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 48
theme_override_constants/margin_right = 48
theme_override_constants/margin_bottom = 48

[node name="NoConnectionContainer" type="VBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/separation = 60

[node name="NoConnection" type="Label" parent="MarginContainer/NoConnectionContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 50
text = "Connection Error: It seems you're not currently connected to the internet.
Please establish a connection and try again."
autowrap_mode = 2

[node name="TryAgain" type="Button" parent="MarginContainer/NoConnectionContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Try Again"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../MarginContainer/NoConnectionContainer/NoConnection")
autoplay = "text_animation"
speed_scale = 2.0
libraries = {
"": SubResource("AnimationLibrary_rll6h")
}

[node name="TransitionLayer" type="ColorRect" parent="."]
modulate = Color(0.156863, 0.156863, 0.156863, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6
mouse_filter = 2

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="RequestTimeout" type="Timer" parent="."]
wait_time = 60.0
one_shot = true
autostart = true

[connection signal="pressed" from="MarginContainer/NoConnectionContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="timeout" from="RequestTimeout" to="." method="_on_request_timeout"]
